--- a/tests/tests.csproj
+++ b/tests/tests.csproj
@@ -15,5 +15,6 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\01-02-02-WineBarrel\01-02-02-WineBarrel.csproj" />
   </ItemGroup>
 </Project>
